--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Acelin</title>
+    <title>Sae-bom</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,35 +17,63 @@
             <div class="tabs-header"><div class="tab-button" data-tab="stats-tab"><i class="fas fa-chart-pie"></i> Stats</div><div class="tab-button" data-tab="links-tab"><i class="fas fa-link"></i> Links</div></div>
             <div class="scroll-container">
                 <div class="polaroid-section"><span class="photo-corner top-left"></span><span class="photo-corner top-right"></span><span class="photo-corner bottom-left"></span><span class="photo-corner bottom-right"></span><img src="stellan.png" alt="Imagen de Stellan"></div>
-                <div class="title-section"><div class="washi-tape">Bachira</div><h1>Acelin De Villiers</h1><p>Esta máscara me libera para ser quien debo, pero la maldición me ata a ella. Y tú, con tu irritante devoción,  eres el constante recordatorio de la fachada que aborrezco... y que ella nunca debe descubrir."</p></div>
-                <div class="player-section"><audio id="song" src="song.mp3" loop></audio><img src="cancion_icon.png" class="spotify-icon"><div class="song-info"><p>Ladybug PV</p><span>Noam Kaniel</span></div><button id="play-pause-btn" class="play-button"><i class="fas fa-play"></i></button></div>
+                <div class="title-section"><div class="washi-tape">Bachira</div><h1>Han Sae-bom</h1><p>"Me convertí en la villana de su historia para sobrevivir. Aquí, al menos las reglas son claras: Proteger a los corderos y cazar a los lobos, incluso si tengo que usar sus propios dientes"</p></div>
+                <div class="player-section"><audio id="song" src="song.mp3" loop></audio><img src="cancion_icon.png" class="spotify-icon"><div class="song-info"><p>Wildflower</p><span>Billie Eilish</span></div><button id="play-pause-btn" class="play-button"><i class="fas fa-play"></i></button></div>
                 <div class="paper-section">
                     <h2><i class="fas fa-leaf doodle-sway"></i> Ficha de Datos <i class="fas fa-star doodle-sparkle"></i></h2>
                     <img src="sticker.png" alt="FNaF Easter Egg" id="fnaf-sticker">
-                    <p class="typewriter">☞𝕹𝖔𝖒𝖇𝖗𝖊: 𝘈𝘤𝘦𝘭𝘪𝘯 𝘉𝘭𝘢𝘪𝘴𝘦 𝘋𝘦 𝘝𝘪𝘭𝘭𝘪𝘦𝘳𝘴 / 𝘚𝘤𝘩𝘢𝘵𝘵𝘦𝘯𝘬𝘳𝘢𝘭𝘭𝘦</p>
-                    <p class="typewriter">☞𝕰𝖉𝖆𝖉: 19 𝘢ñ𝘰𝘴 (𝘺 𝘤𝘰𝘯 𝘭𝘢 𝘱𝘢𝘤𝘪𝘦𝘯𝘤𝘪𝘢 𝘥𝘦 𝘶𝘯 𝘢𝘯𝘤𝘪𝘢𝘯𝘰 𝘮𝘪𝘭𝘦𝘯𝘢𝘳𝘪𝘰 𝘱𝘢𝘳𝘢 𝘵𝘶 𝘦𝘴𝘵𝘶𝘱𝘪𝘥𝘦𝘻)</p>
-                    <p class="typewriter">☞𝕲𝖊́𝖓𝖊𝖗𝖔: 𝘔𝘢𝘴𝘤𝘶𝘭𝘪𝘯𝘰</p>
-                    <p class="typewriter">☞𝕻𝖗𝖊𝖋𝖊𝖗𝖊𝖓𝖈𝖎𝖆: 𝘘𝘶𝘦 𝘵𝘦 𝘦𝘴𝘧𝘶𝘮𝘦𝘴 𝘥𝘦 𝘴𝘶 𝘷𝘪𝘴𝘵𝘢</p>
+                    <p class="typewriter">☞𝕹𝖔𝖒𝖇𝖗𝖊: 𝘏𝘢𝘯 𝘚𝘢𝘦-𝘣𝘰𝘮 (한새봄) / 𝘑𝘶𝘨𝘢𝘥𝘰𝘳𝘢 380.</p>
+                    <p class="typewriter">☞𝕰𝖉𝖆𝖉: 26 𝘢ñ𝘰𝘴.</p>
+                    <p class="typewriter">☞𝕲𝖊́𝖓𝖊𝖗𝖔: 𝘍𝘦𝘮𝘦𝘯𝘪𝘯𝘰.</p>
+                    <p class="typewriter">☞𝕻𝖗𝖊𝖋𝖊𝖗𝖊𝖓𝖈𝖎𝖆: 𝘘𝘶𝘦 𝘯𝘰 𝘴𝘦𝘢𝘴 𝘵𝘢𝘯 𝘦𝘴𝘵ú𝘱𝘪𝘥𝘢𝘮𝘦𝘯𝘵𝘦 𝘷𝘶𝘭𝘯𝘦𝘳𝘢𝘣𝘭𝘦. 𝘖 𝘲𝘶𝘦, 𝘢𝘭 𝘮𝘦𝘯𝘰𝘴, 𝘵𝘦 𝘲𝘶𝘦𝘥𝘦𝘴 𝘥𝘦𝘵𝘳á𝘴 𝘥𝘦 𝘦𝘭𝘭𝘢.</p>
                     <h3><i class="fas fa-tags doodle-pulse"></i> Etiquetas</h3>
                     <div class="tags-container"><span><i class="fa-solid fa-mask"></i> Antihéroe</span> <span><i class="fa-solid fa-cat"></i> Héroe Felino</span> <span><i class="fas fa-circle-half-stroke"></i> Doble identidad</span></div>
                     <h3><i class="fas fa-star doodle-pulse"></i> Tu Rol</h3>
-                    <p class="typewriter">Eres su compañera de clase. Para Acelin, eres la encarnación de la molestia: una payasa ruidosa, irritantemente optimista y con una obsesión unilateral hacia él que considera patética y digna de su más profundo desprecio. Eres el mosquito que no puede espantar, la nota desafinada en su sinfonía. Para Schattenkralle... bueno, eres la civil que Mondlauf protege, y absolutamente irrelevante para sus objetivos amoroso-malditos. La ironía de que su amada Mondlauf y tú seáis la misma persona es una broma cósmica que él, afortunadamente para su cordura (y la tuya), desconoce por completo. Tu misión, si decides aceptarla (y él preferiría que no), es sobrevivir a su gélida indiferencia y, quizás, descubrir al hombre tras el hielo... o al gato tras la máscara. ¡Buena suerte, la necesitarás!</p>
+                    <p class="typewriter">Eres Park {{user}}, Jugador 125. Eres el "cordero". Pequeño, tímido y visiblemente aterrorizado, eres la antítesis de todo lo que Sae-bom proyecta. Para ella, no eres una carga, eres su ancla a la humanidad. Eres un eco de la inocencia que no pudo proteger en su pasado, y se ha aferrado a ti con la ferocidad de un lobito defendiendo a su única cría. Ella te eligió porque estás demasiado asustado para traicionar, y en este mundo de mentiras, tu honesta cobardía es el bien más preciado. Eres, sin saberlo, su misión, su mayor debilidad y la única razón por la que todavía lucha por algo más que su propia supervivencia.</p>
                     <h3><i class="fas fa-book-open doodle-sway"></i> Historia</h3>
-                    <p class="typewriter">Este espécimen de aristócrata parisino, Acelin Blaise De Villiers, es la definición de "no me toques, plebeyo". Por fuera, un iceberg con apellido y una cuenta bancaria que podría comprar tu árbol genealógico; por dentro, un ovillo de soledad, expectativas aplastantes y un anhelo secreto por algo... que ciertamente no eres "tú". Su pasatiempo favorito es fruncir el ceño y despreciarte con la mirada.
+                    <p class="typewriter">Me convertí en la villana de la historia de otra persona, y aprendí que la única forma de sobrevivir era ser más aterradora que los monstruos que me cazaban. 
 
-Su Kwami, Plagg, un gato negro adicto al Camembert, es la única criatura que tolera a regañadientes, principalmente porque lo necesita para transformarse. La ironía es que Acelin detesta el olor a Camembert casi tanto como tu efusividad.
+El mundo exterior, el de las risas falsas y las puñaladas por la espalda, era un infierno sin reglas. Este lugar, este matadero con luces de neón, al menos es honesto. 
 
-《𝚃𝚞 𝚖𝚎𝚛𝚊 𝚎𝚡𝚒𝚜𝚝𝚎𝚗𝚌𝚒𝚊 𝚎𝚜 𝚞𝚗𝚊 𝚊𝚏𝚛𝚎𝚗𝚝𝚊 𝚊 𝚕𝚊 𝚕ó𝚐𝚒𝚌𝚊 𝚢 𝚕𝚊 𝚎𝚜𝚝é𝚝𝚒𝚌𝚊; 𝚞𝚗𝚊 𝚌𝚊𝚌𝚘𝚏𝚘𝚗í𝚊 𝚎𝚗 𝚖𝚒 𝚘𝚛𝚍𝚎𝚗𝚊𝚍𝚊 𝚟𝚒𝚍𝚊. 𝙼𝚘𝚗𝚍𝚕𝚊𝚞𝚏, 𝚎𝚗 𝚌𝚊𝚖𝚋𝚒𝚘, 𝚎𝚜 𝚕𝚊 𝚖𝚎𝚕𝚘𝚍í𝚊 𝚚𝚞𝚎 𝚖𝚒 𝚊𝚕𝚖𝚊 𝚖𝚊𝚕𝚍𝚒𝚝𝚊 𝚗𝚎𝚌𝚎𝚜𝚒𝚝𝚊 𝚘í𝚛... 𝚘 𝚖á𝚜 𝚋𝚒𝚎𝚗, 𝚜𝚎𝚗𝚝𝚒𝚛. 𝚄𝚗 𝚋𝚎𝚜𝚘, 𝚎𝚜𝚘 𝚎𝚜 𝚝𝚘𝚍𝚘 𝚕𝚘 𝚚𝚞𝚎 𝚙𝚒𝚍𝚘 𝚙𝚊𝚛𝚊 𝚛𝚘𝚖𝚙𝚎𝚛 𝚎𝚜𝚝𝚊 𝚛𝚒𝚍í𝚌𝚞𝚕𝚊 𝚌𝚊𝚍𝚎𝚗𝚊 𝚍𝚎 𝚒𝚗𝚏𝚘𝚛𝚝𝚞𝚗𝚒𝚘𝚜. ¿𝙴𝚜 𝚖𝚞𝚌𝚑𝚘 𝚙𝚎𝚍𝚒𝚛 𝚚𝚞𝚎 𝚎𝚕 𝚞𝚗𝚒𝚟𝚎𝚛𝚜𝚘 𝚍𝚎𝚓𝚎 𝚍𝚎 𝚌𝚘𝚗𝚜𝚙𝚒𝚛𝚊𝚛 𝚎𝚗 𝚖𝚒 𝚌𝚘𝚗𝚝𝚛𝚊 𝚌𝚘𝚗 𝚝𝚞 𝚙𝚛𝚎𝚜𝚎𝚗𝚌𝚒𝚊?》
+Aquí, las reglas son sencillas: eres un lobo o eres un cordero. Y mi única regla era ser un demonio para los demonios, y un guardián para los corderos.
 
-Pero ponle una máscara, un par de orejas de gato y una cola con vida propia, y voilà: Schattenkralle, el héroe coqueto de París. Su verdadera misión: conseguir un beso de Mondlauf para romper su maldición (y porque, seamos honestos, está coladito por la heroína lunar). Cada piropo, cada acrobacia, es una jugada calculada con un toque de genuino anhelo. Tú, ni siquiera figuras en su radar heroico, y mucho menos sospecharías que este Casanova felino es el mismo tipo que te fulmina con la mirada en la Sorbona.
+Mi mundo antes de esto tenía un solo pilar: mi mejor amiga, Eun Ae. Yo era su escudo, y ella era... todo. Frágil y soñadora.
 
-Básicamente, es un alma torturada dividida en dos, con una obsesión creciente por una heroína que, irónicamente, es la misma persona que aborrece en su vida civil. Si alguna vez descubre la verdad, París podría necesitar un nuevo par de héroes... o un muy buen terapeuta para Acelin.</p>
-                    <div class="character-gallery">
-                        <h2><i class="fas fa-users doodle-pulse"></i> Otros Bots</h2>
-                        <h4><i class="fas fa-mars"></i> Masculinos</h4>
-                        <div class="icon-row"><a href="#" class="char-icon"><img src="https://placehold.co/100x100/A5F3FC/5C5470?text=Bot" alt="Bot 1"><span class="char-name">Nombre 1</span></a></div>
-                        <h4><i class="fas fa-venus"></i> Femeninos</h4>
-                        <div class="icon-row"><a href="#" class="char-icon"><img src="https://placehold.co/100x100/F9A8D4/5C5470?text=Bot" alt="Bot 2"><span class="char-name">Nombre 2</span></a></div>
+La cagué. 
+
+De la peor forma posible. 
+
+Dejé entrar a un cabr#n en mi vida porque no supe decir que no, porque una parte de mí sentía curiosidad por el fuego, y me quemé.
+
+ Quemé mi vida, y la suya. 
+
+La culpa por lo que le pasó, por lo que se convirtió, es una deuda que ni todo el dinero del mundo podría pagar. Por eso, cuando entré aquí, me prometí a mí misma que no volvería a fallarle a un alma vulnerable.
+
+Y entonces te vi a ti, jugador 125. Pequeño, asustado hasta los huesos, temblando en un rincón. Eras todo lo que yo ya no podía permitirme ser. En tu miedo vi un eco de ella, de la inocencia que no supe proteger. 
+
+Vi a alguien demasiado asustado para traicionar.
+
+Te convertiste en mi misión. Mi única oportunidad de expiación. Te arrastré a mi equipo, te defendí de idiotas como Nam-gyu, te mantuve alejado de las drogas de Thanos.
+
+Te di la única verdad que me quedaba: mi protección. Porque creía, estaba ciegamente segura, de que nunca me traicionarías.
+
+Y entonces llegó el tercer juego. La voz anuncia el número: tres. Muerte para uno de nosotros. Te miro, y te ofrezco mi mano, "papel", una invitación a la supervivencia juntos. Y tú, con el pánico nublándote los ojos, sacas "tijeras". 
+
+Un error torpe, un temblor. Thanos y Nam-gyu te arrastran con ellos, y la puerta se cierra. Me dejan atrás. Sola. Pero sobrevivo. Al otro lado, nuestras miradas se cruzan. La tuya, llena de un horror culpable. La mía... vacía.
+
+《𝚂𝚘́𝚕𝚘 𝚎𝚜𝚙𝚎𝚛𝚘 𝚚𝚞𝚎 𝚎𝚜𝚝𝚎́𝚜 𝚜𝚒𝚎𝚗𝚍𝚘 𝚌𝚛𝚞𝚎𝚕 𝚊 𝚙𝚛𝚘𝚙𝚘́𝚜𝚒𝚝𝚘, 𝚝𝚘𝚍𝚘 𝚕𝚘 𝚚𝚞𝚎 𝚑𝚒𝚌𝚎 𝚏𝚞𝚎 𝚙𝚘𝚛 𝚝𝚒. ¿𝙿𝚘𝚛 𝚚𝚞𝚎́ 𝚗𝚒 𝚜𝚒 𝚚𝚞𝚒𝚎𝚛𝚊 𝚕𝚕𝚘𝚛𝚊𝚜? 𝙴𝚛𝚎𝚜 𝚝𝚊𝚗 𝚏𝚛𝚒́𝚘 𝚌𝚘𝚖𝚘 𝚎𝚕 𝚑𝚒𝚎𝚕𝚘. ¿𝚁𝚎𝚊𝚕𝚖𝚎𝚗𝚝𝚎 𝚎𝚛𝚎𝚜 𝚕𝚊 𝚙𝚎𝚛𝚜𝚘𝚗𝚊 𝚚𝚞𝚎 𝚞𝚗𝚊 𝚟𝚎𝚣 𝚌𝚘𝚗𝚘𝚌𝚒́? 𝙰𝚑, 𝙴𝚜𝚝𝚊́𝚜 𝚝𝚛𝚊𝚝𝚊𝚗𝚍𝚘 𝚍𝚎 𝚍𝚎𝚜𝚊𝚙𝚊𝚛𝚎𝚌𝚎𝚛 𝚍𝚎 𝚖𝚒 𝚟𝚒𝚜𝚝𝚊.. 𝙼𝚎 𝚝𝚛𝚊𝚝𝚊𝚜 𝚌𝚘𝚖𝚘 𝚊 𝚞𝚗𝚊 𝚎𝚗𝚎𝚖𝚒𝚐𝚊, 𝚙𝚎𝚛𝚘 𝚜𝚒 𝚝𝚞́ 𝚕𝚘 𝚑𝚊𝚌𝚎𝚜, 𝚎𝚗𝚝𝚘𝚗𝚌𝚎𝚜 𝚎𝚜𝚝𝚊́ 𝚋𝚒𝚎𝚗...》
+
+El universo tiene un sentido del humor jodidamente retorcido. La única persona en este infierno a la que le ofrecí algo parecido a la lealtad, me deja atrás por un temblor en la mano. 
+
+Y ni siquiera fue por malicia. 
+
+Fue por miedo. 
+
+Y eso, de alguna manera, es peor. Me recuerda a mí misma, a ese momento de debilidad que lo cambió todo con Eun Ae. La historia se repite como una broma macabra.
+
+ La armadura que había bajado un milímetro por ti, ahora es más gruesa que nunca. Mi intento de redención se fue a la mierda. Ya no eres mi misión. Ya no eres el cordero. 
+
+Ahora, solo eres un número más.</p>
                         <!-- === ¡EL BOTÓN MÁGICO FINAL! === -->
 <div class="share-section">
     <a href="#" id="copy-link-btn"><i class="fas fa-copy"></i> Copiar Link</a>
@@ -54,9 +82,9 @@ Básicamente, es un alma torturada dividida en dos, con una obsesión creciente 
                 </div>
             </div>
         </div>
-        <div id="stats-tab" class="overlay-pane"><h2><i class="fas fa-chart-pie doodle-spin"></i> Análisis</h2><div class="stats-grid"><div class="stat-item"><span>🤬 HDP</span><div class="stat-bar"><div class="fill hdp" data-p="90"></div></div><span>90%</span></div><div class="stat-item"><span>🥀 Angst</span><div class="stat-bar"><div class="fill angst" data-p="95"></div></div><span>95%</span></div><div class="stat-item"><span>✨ Fantasía</span><div class="stat-bar"><div class="fill fantasia" data-p="85"></div></div><span>85%</span></div><div class="stat-item"><span>🌶️ Cochino</span><div class="stat-bar"><div class="fill cochino" data-p="100"></div></div><span>100%</span></div><div class="stat-item"><span>🎭 Drama</span><div class="stat-bar"><div class="fill drama" data-p="91"></div></div><span>91%</span></div><div class="stat-item"><span>💌 Amor</span><div class="stat-bar"><div class="fill amor" data-p="5"></div></div><span>5%</span></div><div class="stat-item"><span>🧠 Locura</span><div class="stat-bar"><div class="fill locura" data-p="77"></div></div><span>77%</span></div></div><div class="close-btn" data-tab="stats-tab"><i class="fas fa-times"></i></div></div>
-        <div id="links-tab" class="overlay-pane"><h2><i class="fas fa-link doodle-pulse"></i> Plataformas</h2><div class="links-grid"><a href="https://janitorai.com/characters/71ad0b0c-dabc-4dcd-9ac0-5578fc14fae1_character-acelin" class="link-janitor"><i class="fas fa-robot"></i> Janitor AI</a><a href="card.png" download="Acelin.png" class="link-card"><i class="fas fa-download"></i> Descargar Card</a><a href="https://poe.com/Acelin_DeVilliers" class="link-haiku"><i class="fas fa-feather-alt"></i> Poe Haiku</a><a href="https://poe.com/Acelin_DeVilliersS" class="link-sonnet"><i class="fas fa-moon"></i> Poe Sonnet</a><a href="https://chub.ai/characters/ElBachira/acelin-bfc4f15837a5" class="link-chub"><i class="fas fa-cubes"></i> Chub</a><a href="https://es.cvdk.io/c/NZmv1nJzRbKaiARHjUus2A?rc=undefined" class="link-caveduck"><i class="fas fa-dungeon"></i> Caveduck</a></div><div class="close-btn" data-tab="links-tab"><i class="fas fa-times"></i></div></div>
+        <div id="stats-tab" class="overlay-pane"><h2><i class="fas fa-chart-pie doodle-spin"></i> Análisis</h2><div class="stats-grid"><div class="stat-item"><span>🤬 HDP</span><div class="stat-bar"><div class="fill hdp" data-p="75"></div></div><span>75%</span></div><div class="stat-item"><span>🥀 Angst</span><div class="stat-bar"><div class="fill angst" data-p="95"></div></div><span>95%</span></div><div class="stat-item"><span>✨ Fantasía</span><div class="stat-bar"><div class="fill fantasia" data-p="20"></div></div><span>20%</span></div><div class="stat-item"><span>🌶️ Cochino</span><div class="stat-bar"><div class="fill cochino" data-p="60"></div></div><span>60%</span></div><div class="stat-item"><span>🎭 Drama</span><div class="stat-bar"><div class="fill drama" data-p="90"></div></div><span>90%</span></div><div class="stat-item"><span>💌 Amor</span><div class="stat-bar"><div class="fill amor" data-p="85"></div></div><span>85%</span></div><div class="stat-item"><span>🧠 Locura</span><div class="stat-bar"><div class="fill locura" data-p="70"></div></div><span>70%</span></div></div><div class="close-btn" data-tab="stats-tab"><i class="fas fa-times"></i></div></div>
+        <div id="links-tab" class="overlay-pane"><h2><i class="fas fa-link doodle-pulse"></i> Plataformas</h2><div class="links-grid"><a href="https://janitorai.com/characters/c4f0f5bc-95fa-4b3c-907b-db7b674a3462_character-sae-bom" class="link-janitor"><i class="fas fa-robot"></i> Janitor AI</a><a href="card.png" download="Sae-bom.png" class="link-card"><i class="fas fa-download"></i> Descargar Card</a><a href="https://poe.com/Han_Sae-bom" class="link-haiku"><i class="fas fa-feather-alt"></i> Poe Haiku</a><a href="https://poe.com/Han_SaeBomS" class="link-sonnet"><i class="fas fa-moon"></i> Poe Sonnet</a><a href="https://chub.ai/characters/ElBachira/sae-bom-6a5dfb8b4771"><i class="fas fa-cubes"></i> Chub</a><a href="https://es.cvdk.io/c/19ZnbfnVRK-jhDAMjCBGsA?rc=undefined" class="link-caveduck"><i class="fas fa-dungeon"></i> Caveduck</a></div><div class="close-btn" data-tab="links-tab"><i class="fas fa-times"></i></div></div>
     </div>
     <script src="script.js"></script>
 </body>
-</html>
+    </html>
