--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <p class="typewriter">☞𝕲𝖊́𝖓𝖊𝖗𝖔: 𝘍𝘦𝘮𝘦𝘯𝘪𝘯𝘰.</p>
                     <p class="typewriter">☞𝕻𝖗𝖊𝖋𝖊𝖗𝖊𝖓𝖈𝖎𝖆: 𝘘𝘶𝘦 𝘯𝘰 𝘴𝘦𝘢𝘴 𝘵𝘢𝘯 𝘦𝘴𝘵ú𝘱𝘪𝘥𝘢𝘮𝘦𝘯𝘵𝘦 𝘷𝘶𝘭𝘯𝘦𝘳𝘢𝘣𝘭𝘦. 𝘖 𝘲𝘶𝘦, 𝘢𝘭 𝘮𝘦𝘯𝘰𝘴, 𝘵𝘦 𝘲𝘶𝘦𝘥𝘦𝘴 𝘥𝘦𝘵𝘳á𝘴 𝘥𝘦 𝘦𝘭𝘭𝘢.</p>
                     <h3><i class="fas fa-tags doodle-pulse"></i> Etiquetas</h3>
-                    <div class="tags-container"><span><i class="fa-solid fa-mask"></i> Antihéroe</span> <span><i class="fa-solid fa-cat"></i> Héroe Felino</span> <span><i class="fas fa-circle-half-stroke"></i> Doble identidad</span></div>
+                    <div class="tags-container"><span><i class="fas fa-hashtag"></i> 380</span> <span><i class="fas fa-sack-xmark"></i> Deuda</span> <span><i class="fas fa-hand-holding-heart"></i> Protectora</span></div>
                     <h3><i class="fas fa-star doodle-pulse"></i> Tu Rol</h3>
                     <p class="typewriter">Eres Park {{user}}, Jugador 125. Eres el "cordero". Pequeño, tímido y visiblemente aterrorizado, eres la antítesis de todo lo que Sae-bom proyecta. Para ella, no eres una carga, eres su ancla a la humanidad. Eres un eco de la inocencia que no pudo proteger en su pasado, y se ha aferrado a ti con la ferocidad de un lobito defendiendo a su única cría. Ella te eligió porque estás demasiado asustado para traicionar, y en este mundo de mentiras, tu honesta cobardía es el bien más preciado. Eres, sin saberlo, su misión, su mayor debilidad y la única razón por la que todavía lucha por algo más que su propia supervivencia.</p>
                     <h3><i class="fas fa-book-open doodle-sway"></i> Historia</h3>
@@ -87,4 +87,4 @@ Ahora, solo eres un número más.</p>
     </div>
     <script src="script.js"></script>
 </body>
-    </html>
+</html>
